<resources>
    <string name="app_name">Barbershop</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="input_you_name_hint">Имя пользователя: </string>
    <string name="input_your_password_hint">Пароль: </string>
    <string name="sign_in_button">Войти</string>
    <string name="greetings">Привет %s! Что желаете?</string>
    <string name="service_1">Service 1</string>
    <string name="service_2">Service 2</string>
    <string name="additives">Дополнение к услуге: %s?</string>
    <string name="additive_1">Additive 1</string>
    <string name="additive_2">Additive 2</string>
    <string name="additive_3">Additive 3</string>
    <string name="choose_service_type">Выберите вид услуги</string>
    <string name="make_order">Сделать заказ</string>
    <string name="name">Имя:</string>
    <string name="service">Услуга:</string>
    <string name="additive">Дополнения</string>
    <string name="service_type">Тип услуги:</string>
    <string name="error_fields_empty">Пожалуйста заполните все поля</string>

    <array name="types_of_service_one">
        <item>Type 1</item>
        <item>Type 2</item>
        <item>Type 3</item>
    </array>
    <array name="types_of_service_two">
        <item>Type 4</item>
        <item>Type 5</item>
    </array>
</resources>